# School-Management-API

./: .dockerignore  .env  .gitignore  docker-compose.yml  main.py  pyproject.toml
apps/academics/: admin.py  models.py  serializers.py  urls.py  views.py
apps/academics/migrations/: 0001_initial.py
apps/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py
apps/principals/: apps.py
config/: settings.py  urls.py
docker/django/: Dockerfile  entrypoint.sh
