[project]
name = "school-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]
